<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">爱奇艺</string>

    <!--loading指示样式-->
    <string name="BallSpinGradientLoaderIndicator">com.oushang.iqiyi.ui.BallSpinGradientLoaderIndicator</string>

    <!--导航-->
    <string name="home_page">首页</string>
    <string name="classify">分类</string>
    <string name="my">我的</string>

    <!--首页-->
    <string name="hot_recommend">热门</string>
    <string name="home_loading_text">内容加载中，请耐心等候</string>

    <!--金刚区-->
    <string name="movie">电影</string>
    <string name="variety">综艺</string>
    <string name="member">会员</string>
    <string name="favorites">收藏</string>
    <string name="recent">最近</string>

    <!--分类-->
    <string name="normal_channel_empty">暂无记录，可编辑添加或选择下方频道观看</string>
    <string name="edit">编辑</string>
    <string name="cancel_edit">取消编辑</string>
    <string name="screen">筛选</string>
    <string name="clear">清空</string>
    <string name="channel_info_empty">暂无筛选结果</string>

    <!--我的-->
    <string name="my_tab_text_history">历史</string>
    <string name="my_tab_text_favorite">收藏</string>
    <string name="my_tab_text_setting">设置</string>
    <string name="my_setting_item_play_doload">播放与下载</string>
    <string name="my_setting_item_clear_cache">清除缓存</string>
    <string name="my_setting_item_privacy">隐私</string>
    <string name="my_history_empty">暂无播放历史</string>
    <string name="my_history_empty_button">去首页看看</string>
    <string name="my_history_load_fail">播放历史加载失败</string>
    <string name="my_record_reload_button">重新加载</string>
    <string name="my_favorite_empty">暂无收藏内容</string>
    <string name="my_favorite_empty_button">去登录</string>
    <string name="my_favorite_load_fail">收藏加载失败</string>
    <string name="my_favorite_load_fail_button">重新加载</string>
    <string name="my_edit_all_select">全选</string>
    <string name="my_edit_delete_select">删除</string>
    <string name="my_edit_cancel_select">取消</string>

    <!--搜索框-->
    <string name="search_hint_text">搜索电视剧、电影、综艺</string>
    <string name="search_bar_hint_text">请输入想搜索的电视剧、电影、综艺</string>

    <!--搜索-->
    <string name="search_history_label_title">搜索历史</string>
    <string name="hot_search_label">热门搜索</string>
    <string name="search_result_type_label">结果类型</string>
    <string name="search_result_relate_button">相关</string>
    <string name="search_result_newest_button">最新</string>
    <string name="search_result_hottest_button">最热</string>
    <string name="search_result_tips">以下片源来自于爱奇艺</string>
    <string name="search_result_empty">暂无搜索结果</string>
    <string name="search_no_more">没有更多的结果了</string>

    <string name="common_channel_tag_title">常用频道</string>
    <string name="all_channel_tag_title">所有频道</string>
    <string name="channel_unedited">channel_unedited</string>
    <string name="channel_editing">channel_editing</string>

    <!--网络异常-->
    <string name="network_try_again_later">网络异常，请稍后再试</string>
    <string name="network_exception">网络异常，请检查网络设置</string>
    <string name="refresh_try">刷新重试</string>
    <string name="network_error">网络好像出了点问题，请检查网络或重新加载</string>
    <string name="network_not_connect">网络未连接</string>

    <!--播放器-->
    <string name="player_selections">选集</string>
    <string name="player_ratio">4：3</string>
    <string name="player_dts">DTS</string>
    <string name="back_title_defination">清晰度选择</string>
    <string name="back_title_ratio">画面比例</string>
    <string name="player_try_see">试看结束，请开通VIP会员后观看</string>
    <string name="player_click_open_membership">点击开通</string>
    <string name="player_driving_safety">为了行驶安全，视频已暂停播放</string>
    <string name="player_concurrent_tip">VIP账号已在另一个设备使用，请重新登录</string>

    <string name="play_synopsis_info">剧集简介</string>
    <string name="play_related_recommend">相关推荐</string>
    <string name="play_synopsis_detail">剧集详情</string>
    <string name="play_more_selections">更多选集</string>
    <string name="play_relatedrecommend_empty">暂无相关推荐视频</string>
    <string name="play_synopsis_label">剧集</string>
    <string name="play_synopsis_main_actor">主演</string>

    <!--清晰度-->
    <string name="defination_1080p">1080P</string>
    <string name="defination_720p">720P</string>
    <string name="defination_hp">高清</string>
    <string name="defination_sp">标清</string>
    <string name="defination_fp">流畅</string>

    <string name="defination_change_tip">正在切换清晰度，请稍候…</string>

    <string name="ratio_4_3">4:3</string>
    <string name="ratio_16_9">16:9</string>
    <string name="ratio_21_9">21:9</string>

    <string name="more_selection_forward_sort">正序</string>
    <string name="more_selection_reverse_sort">倒序</string>

    <!--image desc-->
    <string name="img_disclaimer_close">disclaimer_close</string>
    <string name="img_back_defination">defination_back</string>
    <string name="img_back_hot_channel">hot_channel_back</string>
    <string name="img_hot_channel">hot_channel</string>
    <string name="img_my_edit">my_edit</string>
    <string name="img_my_separator">my_separator</string>

    <!--会员-->
    <string name="member_qrcode_tip">请用手机微信、支付宝扫码开通会员</string>
    <string name="member_qrcode_tip_provisional">敬请期待</string>

    <!--账号-->
    <string name="account_login_qrcode_tips">请用爱奇艺App扫码登录</string>
    <string name="account_login_qrcode_instruction">登录后可同步收藏与播放记录</string>
    <string name="account_login_qrcode_invalid">二维码已失效\n请点击刷新</string>
    <string name="account_login_network_error">网络异常，请点击刷新重试</string>
    <string name="account_login_network_fresh_button">刷新</string>
    <string name="account_login_cancel">你已经取消登录，请点击二维码刷新</string>
    <string name="account_login_out">退出登录</string>
    <string name="account_login_oushangstyle">欧尚Style授权登录</string>

    <!--dialog-->
    <string name="service_authentication_dialog_title">服务提醒</string>
    <string name="service_authentication_dialog_tips">爱奇艺服务已到期，请前往\n欧尚Style App-升级 进行购买</string>
    <string name="service_authentication_dialog_content">爱奇艺服务已到期，请前往服务商城进行购买</string>
    <string name="service_authentication_dialog_goto_servicemall_button">前往商城</string>
    <string name="service_authentication_dialog_cancel_button">取消</string>
    <string name="dialog_clear_cache">确定清除缓存？</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_i_known">我知道了</string>
    <string name="dialog_iqiyi_tips_title">温馨提示</string>
    <string name="dialog_iqiyi_tips_content">需同意《爱奇艺PPS用户网络服务使用协议》、《爱奇艺隐私政策》后才可使用爱奇艺APP</string>
    <string name="dialog_vehicle_warn_title">为保障行车安全，驾驶员禁止观看视频，\n如乘客需观看，请点击继续播放</string>
    <string name="dialog_vehicle_continue_button">继续播放</string>

    <!--用户协议与隐私保护-->
    <string name="user_agreement_and_privacy_protection_title">用户协议与隐私保护</string>
    <string name="user_agreement_and_privacy_protection_content">
        感谢您选择爱奇艺!
        \n我们非常重视您的个人信息和隐私保护。为了更好地保障您的个人权益，在您使用我们的产品前，请您授权允许使用您的爱奇艺用户头像、昵称等用户信息，同时请务必审慎阅读 %1$s 与 %2$s 内的所有条款，尤其是：
        \n1. 我们对您的个人信息的收集/保存/使用/对外提供/保护等规则条款，以及您的用户权利等条款；
        \n2. 约定我们的限制责任、免责条款；
        \n3. 其他以颜色或加粗进行标识的重要条款。
        \n如您对以上协议有任何疑问，可通过人工客服或发邮件至fankui@qiyi.com与我们联系。您点击“同意并继续”的
        行为即表示您已阅读完毕并同意以上协议的全部内容。 如您同意以上协议内容，请点击“同意并继续”，开始使用我们的产品和服务！
    </string>
    <string name="user_agreement_and_privacy_protection_agree_btn">同意并继续</string>
    <string name="user_agreement_and_privacy_protection_disagree_btn">不同意</string>
    <string name="user_agreement_name">《爱奇艺网络服务使用协议》</string>
    <string name="privacy_protection_name">《爱奇艺隐私政策》</string>
    <string name="user_agreement_title">爱奇艺用户网络服务使用协议</string>
    <string name="privacy_protection_title">隐私政策</string>

    <string name="channelTagBehavior">com.oushang.iqiyi.ui.ChannelTagBehavior</string>
    <string name="vip_expire_time_label">VIP会员%s到期</string>

    <string name="scope_me">meFragment</string>
    <string name="scope_my_setting">mySettingFragment</string>
    <string name="scope_clear_caches">clearChaches</string>
    <string name="scope_setting_child">settingChild</string>
    <string name="scope_my_setting_item">mySettingItem</string>
</resources>
