<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="474dp"
    android:layout_height="223dp"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="21dp"
            android:text="@string/service_authentication_dialog_title"
            android:textColor="@color/color_white"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_18dp"
            android:text="@string/service_authentication_dialog_content"
            android:textColor="@color/color_white"
            android:textSize="@dimen/tag_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="52dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/service_authentication_dialog_goto_servicemall_button"
            android:textColor="@color/color_white"
            android:background="@drawable/dialog_left_button_bg"
            android:textSize="@dimen/title_text_size" />

        <Button
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/color_white"
            android:background="@drawable/dialog_right_button_bg"
            android:textSize="@dimen/title_text_size"
            android:text="@string/service_authentication_dialog_cancel_button"/>


    </LinearLayout>

</RelativeLayout>