<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/dialog_flow_width"
    android:layout_height="@dimen/dialog_flow_height"
    android:layout_gravity="center"
    android:background="@drawable/dialog_flow_bg"
    style="@style/CustomDialog">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_60px"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_28px"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/color_theme_text"
            android:visibility="gone"
            android:text="@string/service_authentication_dialog_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_24px"
            android:text="@string/service_authentication_dialog_content"
            android:textSize="@dimen/tag_text_size"
            android:textColor="@color/color_theme_text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_flow_button_height"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <Button
            android:id="@+id/to_shop_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/dialog_left_button_bg"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/color_theme_text"
            android:text="@string/service_authentication_dialog_goto_servicemall_button"/>

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/dialog_right_button_bg"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/color_theme_text"
            android:text="@string/service_authentication_dialog_cancel_button"/>

    </LinearLayout>
</RelativeLayout>