<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/dialog_tips_width"
    android:layout_height="@dimen/dialog_tips_height"
    android:background="@drawable/dialog_bg">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <!--温馨提示-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_44px"
            android:text="@string/dialog_iqiyi_tips_title"
            android:textColor="@color/color_theme_text"
            android:textSize="@dimen/title_text_size" />

        <!--提示内容-->
        <TextView
            android:layout_width="@dimen/dialog_tips_content_width"
            android:layout_height="@dimen/dialog_tips_content_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_24px"
            android:lineSpacingMultiplier="1.5"
            android:gravity="start"
            android:text="@string/dialog_iqiyi_tips_content"
            android:textColor="@color/color_theme_text"
            android:textSize="@dimen/tag_text_size" />

    </LinearLayout>

    <!--点击按钮-->
    <Button
        android:id="@+id/dialog_i_know_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_tips_button_height"
        android:layout_alignParentBottom="true"
        android:background="@drawable/dialog_button_bg"
        android:text="@string/dialog_i_known"
        android:textColor="@color/color_theme_text"
        android:textSize="@dimen/title_text_size" />

</RelativeLayout>