<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="@dimen/dialog_clear_cache_width"
    android:layout_height="@dimen/dialog_clear_cache_height"
    android:background="@drawable/dialog_flow_bg">

    <TextView
        android:id="@+id/vehicle_warn_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_79px"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/color_theme_text"
        android:text="@string/dialog_vehicle_warn_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_clear_cache_button_height"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/vehicle_warn_continue_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/dialog_left_button_bg"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/color_vehicle_warn_dialog_text"
            android:text="@string/dialog_vehicle_continue_button"
            android:clickable="true"/>

        <TextView
            android:id="@+id/vehicle_warn_cancel_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/dialog_right_button_bg"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/color_theme_text"
            android:text="@string/dialog_cancel"
            android:clickable="true"/>

    </LinearLayout>




</RelativeLayout>